#pragma once

namespace ConnixCore {
namespace Communication {

enum class ConnectionState {
    CONNECTED,
    CLOSING,
    CLOSED
};

} // namespace Communication
} // namespace ConnixCore
